--- a/items.html
+++ b/items.html
@@ -14,13 +14,13 @@
 <body onload="loadFilters()">
     <div class="container">
         <div class="row justify-content-around">
-            <header class="logo col-11">
+            <header class="logo col-9">
                 <a href="index.html">
                     <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
                 </a>
                 <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
             </header>
-            <a class="col-1" href="./register.html">register</a>
+            <div id="user-section" class="col-3"></div>
         </div>
         <main class="main_page">
             <section>
@@ -159,6 +159,7 @@
             </div>
         </footer>
         <script src="./js/light_dark_scheme.js"></script>
+        <script src="./js/user.js"></script>
     </div>
 </body>
 </html>
