--- a/transformations.html
+++ b/transformations.html
@@ -12,12 +12,15 @@
 </head>
 <body>
   <div class="container">
-    <header class="logo">
-      <a href="index.html">
-          <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
-      </a>
-      <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
-    </header>
+    <div class="row justify-content-around">
+      <header class="logo col-9">
+          <a href="index.html">
+              <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
+          </a>
+          <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
+      </header>
+      <div id="user-section" class="col-3"></div>
+  </div>
     <main>
       <h1>Transformations</h1>
       <p>Transformations alter Isaac's appearance and grant him special abilities.</p>
@@ -228,5 +231,6 @@
     </div>
 </footer>
   <script src="./js/light_dark_scheme.js"></script>
+  <script src="./js/user.js"></script>
 </body>
 </html>
