--- a/Curses.html
+++ b/Curses.html
@@ -11,17 +11,19 @@
 </head>
 <body>
     <div class="container">
-        <header class="logo">
-            <a href="index.html">
-                <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
-            </a>
-            <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
-        </header>
+        <div class="row justify-content-around">
+            <header class="logo col-9">
+                <a href="index.html">
+                    <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
+                </a>
+                <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
+            </header>
+            <div id="user-section" class="col-3"></div>
+        </div>
 
         <main>
             <h1>Curses in the Game</h1>
             <p>Every floor Isaac reaches has a chance to be cursed, which hides or alters game elements to make the floor more difficult to complete. Each curse only lasts for the current floor. The possible curses are:</p>
-            
             <section>
                 <h2>Curse Descriptions</h2>
                 <table>
@@ -138,5 +140,6 @@
         </div>
     </footer>
     <script src="./js/light_dark_scheme.js"></script>
+    <script src="./js/user.js"></script>
 </body>
 </html>
