--- a/achievements.html
+++ b/achievements.html
@@ -14,13 +14,13 @@
 <body>
     <div class="container">
         <div class="row justify-content-around">
-            <header class="logo col-10">
+            <header class="logo col-9">
                 <a href="index.html">
                     <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
                 </a>
                 <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
             </header>
-            <div id="user-section" class="col-2"></div>
+            <div id="user-section" class="col-3"></div>
         </div>
         <main class="main_page">
             <h1>Achievements</h1>
@@ -227,5 +227,6 @@
         </div>
     </footer>
     <script src="./js/light_dark_scheme.js"></script>
+    <script src="./js/user.js"></script>
 </body>
 </html>
