--- a/endings.html
+++ b/endings.html
@@ -11,12 +11,15 @@
 </head>
 <body>
     <div class="container">
-        <header class="logo">
-            <a href="index.html">
-                <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
-            </a>
-            <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
-        </header>
+        <div class="row justify-content-around">
+            <header class="logo col-9">
+                <a href="index.html">
+                    <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
+                </a>
+                <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
+            </header>
+            <div id="user-section" class="col-3"></div>
+        </div>
 
         <main>
             <h1>The Binding of Isaac: Endings</h1>
@@ -300,5 +303,6 @@
         </div>
     </footer>
     <script src="./js/light_dark_scheme.js"></script>
+    <script src="./js/user.js"></script>
 </body>
 </html>
