--- a/login.html
+++ b/login.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap-icons/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/page.css">
-    <link rel="stylesheet" href="bootstrap-icons/font/bootstrap-icons.min.css">
     <script src="js/login.js"></script>
     <title>Log in</title>
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
@@ -26,7 +26,7 @@
                 <input class="text-black" type="email" name="email" id="email" required> <br>
                 <span>Password: </span> <br>
                 <input class="text-black" type="password" name="password" id="password" required> <br>
-                <button type="button" onclick="login()" class="btn btn-primary my-3">Login <i class="bi bi-box-arrow-in-right scale"></i></button>
+                <button type="button" onclick="login()" class="btn btn-primary my-3">Login <i class="bi bi-box-arrow-in-right rotate"></i></button>
                 <div id="form-errors"></div>
                 <div id="form-success"></div>
         </main>
