--- a/register.html
+++ b/register.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap-icons/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/page.css">
-    <link rel="stylesheet" href="bootstrap-icons/font/bootstrap-icons.min.css">
     <script src="js/register.js"></script>
     <title>Register</title>
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
@@ -28,7 +28,7 @@
                 <input class="text-black" type="email" name="email" id="email" required> <br>
                 <span>Password: </span> <br>
                 <input class="text-black" type="password" name="password" id="password" required> <br>
-                <button type="button" onclick="register()" class="btn btn-primary my-3">Register <i class="bi bi-person-plus scale"></i></button>
+                <button type="button" onclick="register()" class="btn btn-primary my-3">Register <i class="bi bi-person-plus rotate"></i></button>
                 <div id="form-errors"></div>
                 <div id="form-success"></div>
         </main>
